--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,9 +64,23 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 />
-
         </com.google.android.material.textfield.TextInputLayout>
-
+        <TextView
+            android:id="@+id/registerNavi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Don't have an account? Register Now"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:id="@+id/fgtPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forgot Password"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"/>
     </LinearLayout>
     <Button
         android:layout_width="wrap_content"
