--- a/app/src/main/res/menu/drawer_menu_list.xml
+++ b/app/src/main/res/menu/drawer_menu_list.xml
@@ -5,11 +5,11 @@
     <item android:title="Grocery">
         <menu>
             <item android:title="Add Items"
-                android:icon="@drawable/ic_action_add" />
+                android:icon="@drawable/ic_add_list" />
             <item android:title="View Items"
-                android:icon="@drawable/ic_action_view" />
+                android:icon="@drawable/ic_view_list" />
             <item android:title="Delete Items"
-                android:icon="@drawable/ic_action_delete" />
+                android:icon="@drawable/ic_delete_list" />
         </menu>
     </item>
 
@@ -27,10 +27,10 @@
     <item android:title="Settings">
         <menu>
             <item android:title="Notifications"
-                android:icon="@drawable/ic_action_notification"
+                android:icon="@drawable/ic_notification"
                 app:actionLayout="@layout/toggle_switch_layout"/>
             <item android:title="Log Out"
-                android:icon="@drawable/ic_action_login" />
+                android:icon="@drawable/ic_log_out" />
         </menu>
     </item>
 
