--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,20 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rec_fridge"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="75dp">
+                android:layout_marginTop="74dp">
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/fridgeicon"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="30dp"/>
+
+                <View
+                    android:layout_width="3dp"
+                    android:layout_height="90dp"
+                    android:background="@color/black"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="8dp"/>
 
             </RelativeLayout>
 
