--- a/app/src/main/res/menu/drawer_menu_list.xml
+++ b/app/src/main/res/menu/drawer_menu_list.xml
@@ -5,10 +5,13 @@
     <item android:title="Grocery">
         <menu>
             <item android:title="Add Items"
+                android:id="@+id/adding_items"
                 android:icon="@drawable/ic_add_list" />
             <item android:title="View Items"
+                android:id="@+id/viewing_items"
                 android:icon="@drawable/ic_view_list" />
             <item android:title="Delete Items"
+                android:id="@+id/deleting_items"
                 android:icon="@drawable/ic_delete_list" />
         </menu>
     </item>
@@ -16,10 +19,13 @@
     <item android:title="Recipe">
         <menu>
             <item android:title="Breakfast"
+                android:id="@+id/breakfast_view"
                 android:icon="@drawable/ic_action_breakfast" />
             <item android:title="Lunch"
+                android:id="@+id/lunch_view"
                 android:icon="@drawable/ic_action_lunch" />
             <item android:title="Dinner"
+                android:id="@+id/dinner_view"
                 android:icon="@drawable/ic_action_dinner" />
         </menu>
     </item>
@@ -30,6 +36,7 @@
                 android:icon="@drawable/ic_notification"
                 app:actionLayout="@layout/toggle_switch_layout"/>
             <item android:title="Log Out"
+                android:id="@+id/log_out"
                 android:icon="@drawable/ic_log_out" />
         </menu>
     </item>
