--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,57 +59,24 @@
                     android:layout_width="60dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_action_scan"
-                    android:id="@+id/scanBtn"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Scan"
-                    android:layout_below="@+id/scanBtn"
-                    android:layout_marginLeft="28dp"/>
-
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_toRightOf="@+id/scanBtn"
-                    android:src="@drawable/ic_action_add"
+                    android:layout_marginLeft="25dp"
+                    android:src="@drawable/ic_add_list"
                     android:id="@+id/addBtn"/>
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add"
                     android:layout_below="@+id/addBtn"
-                    android:layout_toRightOf="@+id/scanBtn"
-                    android:layout_marginLeft="28dp"/>
+                    android:id="@+id/addTxt"
+                    android:layout_marginLeft="35dp"/>
 
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_action_delete"
+                    android:layout_marginLeft="23dp"
                     android:layout_toRightOf="@+id/addBtn"
-                    android:id="@+id/deleteBtn"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Delete"
-                    android:layout_below="@+id/deleteBtn"
-                    android:layout_toRightOf="@+id/addBtn"
-                    android:layout_marginLeft="26.5dp"/>
-
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_action_view"
-                    android:layout_toRightOf="@+id/deleteBtn"
+                    android:src="@drawable/ic_view_list"
                     android:id="@+id/viewBtn"/>
 
                 <TextView
@@ -117,15 +84,16 @@
                     android:layout_height="wrap_content"
                     android:text="View"
                     android:layout_below="@+id/viewBtn"
-                    android:layout_toRightOf="@+id/deleteBtn"
-                    android:layout_marginLeft="28dp"/>
+                    android:layout_toRightOf="@+id/addTxt"
+                    android:id="@+id/viewTxt"
+                    android:layout_marginLeft="63dp"/>
 
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="30dp"
-                    android:src="@drawable/ic_action_recipe"
+                    android:layout_marginLeft="25dp"
+                    android:src="@drawable/ic_recipe_book"
                     android:layout_toRightOf="@+id/viewBtn"
                     android:id="@+id/recipeBtn"/>
 
@@ -134,8 +102,28 @@
                     android:layout_height="wrap_content"
                     android:text="Recipe"
                     android:layout_below="@+id/recipeBtn"
-                    android:layout_toRightOf="@+id/viewBtn"
-                    android:layout_marginLeft="33dp"/>
+                    android:layout_toRightOf="@+id/viewTxt"
+                    android:id="@+id/recipeTxt"
+                    android:layout_marginLeft="50dp"/>
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="25dp"
+                    android:src="@drawable/ic_grocery_shop"
+                    android:layout_toRightOf="@+id/recipeBtn"
+                    android:id="@+id/storeBtn"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Store"
+                    android:layout_below="@+id/storeBtn"
+                    android:layout_toRightOf="@+id/recipeTxt"
+                    android:layout_marginLeft="46dp"/>
+
+
 
 
             </RelativeLayout>
