--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,9 +42,7 @@
                     android:background="@color/black"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="8dp"/>
-
             </RelativeLayout>
-
 
             <RelativeLayout
                 android:id="@+id/FloatingMenu"
@@ -122,169 +120,32 @@
                     android:layout_below="@+id/storeBtn"
                     android:layout_toRightOf="@+id/recipeTxt"
                     android:layout_marginLeft="46dp"/>
-
-
-
-
             </RelativeLayout>
 
-            <androidx.cardview.widget.CardView android:layout_height="210dp"
-                android:layout_width="match_parent" android:layout_below="@+id/FloatingMenu"
-                android:id="@+id/expItems">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:textSize="20sp"
+                android:text="Expiring Soon"
+                android:textColor="@color/black"
+                android:layout_marginTop="40dp"
+                android:layout_below="@+id/FloatingMenu"
+                android:layout_above="@+id/expiry_recycler"/>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Expiring Soon"
-                        android:padding="10dp"/>
-                </RelativeLayout>
-
-                <LinearLayout
-
-                    android:layout_marginTop="50dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:orientation="horizontal"
-
-                    >
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="110dp"
-                        android:layout_height="150dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:background="@drawable/rec_vertical"
-                            android:layout_marginLeft="10dp">
-
-
-                            <de.hdodenhof.circleimageview.CircleImageView
-                                xmlns:app="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/profile_image"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:src="@mipmap/ic_launcher"
-                                app:civ_border_width="2dp"
-                                app:civ_border_color="#00000000"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="10dp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Cabbage"
-                                android:textColor="@color/white"
-                                android:layout_marginLeft="20dp"
-                                android:layout_marginTop="10dp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Today"
-                                android:textColor="@color/white"
-                                android:layout_marginLeft="30dp"
-                                android:layout_marginTop="5dp"/>
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="110dp"
-                        android:layout_height="150dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:background="@drawable/rec_vertical"
-                            android:layout_marginLeft="10dp">
-
-                            <de.hdodenhof.circleimageview.CircleImageView
-                                xmlns:app="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/profile_image1"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:src="@mipmap/ic_launcher"
-                                app:civ_border_width="2dp"
-                                app:civ_border_color="#00000000"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="10dp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Tomato"
-                                android:textColor="@color/white"
-                                android:layout_marginLeft="20dp"
-                                android:layout_marginTop="10dp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Today"
-                                android:textColor="@color/white"
-                                android:layout_marginLeft="30dp"
-                                android:layout_marginTop="5dp"/>
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="110dp"
-                        android:layout_height="150dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/rec_vertical"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="10dp">
-
-                            <de.hdodenhof.circleimageview.CircleImageView
-                                xmlns:app="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/profile_image2"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:src="@mipmap/ic_launcher"
-                                app:civ_border_width="2dp"
-                                app:civ_border_color="#00000000"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="10dp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Cabbage"
-                                android:textColor="@color/white"
-                                android:layout_marginLeft="20dp"
-                                android:layout_marginTop="10dp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Today"
-                                android:textColor="@color/white"
-                                android:layout_marginLeft="30dp"
-                                android:layout_marginTop="5dp"/>
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/expiry_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="65dp"
+                android:layout_below="@+id/FloatingMenu"
+                />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cards_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_below="@+id/expItems" />
+                android:layout_below="@+id/expiry_recycler" />
         </RelativeLayout>
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/drawer_toolbar"
