--- a/app/src/main/res/layout/toggle_switch_layout.xml
+++ b/app/src/main/res/layout/toggle_switch_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
+    <Switch
         android:id="@+id/toggle_switch"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
