--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
                 android:background="@drawable/semi_circle">
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Welcome to Grocery Manager"
+                    android:fontFamily="@font/lorabold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="40dp"
+                    android:textSize="16sp"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -29,6 +38,25 @@
                 android:background="@drawable/rec_fridge"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="74dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ownerName"
+                    android:fontFamily="@font/montserratmedium"
+                    android:id="@+id/owner"
+                    android:layout_toRightOf="@+id/verticalLine"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fridge"
+                    android:fontFamily="@font/montserratbold"
+                    android:textSize="18sp"
+                    android:layout_toRightOf="@+id/verticalLine"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="40dp"/>
                 <ImageView
                     android:layout_width="70dp"
                     android:layout_height="70dp"
@@ -37,9 +65,10 @@
                     android:layout_marginLeft="30dp"/>
 
                 <View
-                    android:layout_width="3dp"
+                    android:layout_width="1dp"
                     android:layout_height="90dp"
                     android:background="@color/black"
+                    android:id="@+id/verticalLine"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="8dp"/>
             </RelativeLayout>
@@ -66,6 +95,7 @@
                     android:text="Add"
                     android:layout_below="@+id/addBtn"
                     android:id="@+id/addTxt"
+                    android:fontFamily="@font/loraregular"
                     android:layout_marginLeft="35dp"/>
 
                 <ImageView
@@ -84,6 +114,7 @@
                     android:layout_below="@+id/viewBtn"
                     android:layout_toRightOf="@+id/addTxt"
                     android:id="@+id/viewTxt"
+                    android:fontFamily="@font/loraregular"
                     android:layout_marginLeft="63dp"/>
 
                 <ImageView
@@ -102,6 +133,7 @@
                     android:layout_below="@+id/recipeBtn"
                     android:layout_toRightOf="@+id/viewTxt"
                     android:id="@+id/recipeTxt"
+                    android:fontFamily="@font/loraregular"
                     android:layout_marginLeft="50dp"/>
 
                 <ImageView
@@ -119,18 +151,23 @@
                     android:text="Store"
                     android:layout_below="@+id/storeBtn"
                     android:layout_toRightOf="@+id/recipeTxt"
+                    android:fontFamily="@font/loraregular"
                     android:layout_marginLeft="46dp"/>
             </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:textSize="20sp"
+                android:layout_height="wrap_content"
                 android:text="Expiring Soon"
                 android:textColor="@color/black"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:textSize="16sp"
+                android:fontFamily="@font/montserratmedium"
                 android:layout_below="@+id/FloatingMenu"
-                android:layout_above="@+id/expiry_recycler"/>
+                />
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/expiry_recycler"
@@ -139,13 +176,24 @@
                 android:layout_marginTop="65dp"
                 android:layout_below="@+id/FloatingMenu"
                 />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Discover Daily"
+                android:textColor="@color/black"
+                android:layout_marginLeft="10dp"
+                android:textSize="16sp"
+                android:id="@+id/discTxt"
+                android:fontFamily="@font/montserratmedium"
+                android:layout_below="@+id/expiry_recycler"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cards_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_below="@+id/expiry_recycler" />
+                android:layout_below="@+id/discTxt" />
         </RelativeLayout>
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/drawer_toolbar"
