--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome Back!\nSign Up to continue to Grocery Manager"
-        android:fontFamily="@font/montserratregular"
+        android:fontFamily="@font/montserratbold"
         android:textSize="25sp"
         android:textColor="@color/white"
         android:layout_below="@+id/textView"
@@ -78,11 +78,13 @@
 
     </LinearLayout>
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account. Login now"
+        android:fontFamily="@font/montserratmedium"
         android:textColor="@color/white"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
         android:id="@+id/loginNavi"
         android:layout_above="@+id/signupBtn"
         android:layout_below="@+id/loginLayout"
