--- a/app/src/main/res/layout/tutorial_steps_item.xml
+++ b/app/src/main/res/layout/tutorial_steps_item.xml
@@ -8,12 +8,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/rectangle"
+        android:elevation="4dp"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tuto_text"
+            android:fontFamily="@font/montserratregular"
+            android:padding="5dp"
+            android:textColor="@color/black"
             android:text="Hello"
             android:layout_margin="5dp"/>
     </RelativeLayout>
