--- a/app/src/main/res/layout/activity_add_grocery.xml
+++ b/app/src/main/res/layout/activity_add_grocery.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation = "vertical"
     android:gravity = "center"
+    android:background="@drawable/activity_update_bg"
     tools:context=".addGrocery">
 
     <LinearLayout
