Recipe3.0 section by IZZAT

--- a/app/src/main/res/layout/activity_details_recipe.xml
+++ b/app/src/main/res/layout/activity_details_recipe.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
-        tools:context=".DetailsActivity">
+        tools:context=".DetailsRecipe">
+
 
         <ImageView
             android:id="@+id/main_image"
@@ -58,6 +59,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/street_corner_semibold"
             android:text="Chicken Lime Bowl"
+            android:textColor="@color/design_default_color_on_secondary"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/main_image" />
@@ -86,6 +88,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/street_corner_semibold"
             android:text="INGREDIENT"
+            android:textColor="@color/design_default_color_on_secondary"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/summary_recipe" />
@@ -113,6 +116,8 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="In need of quick and delicious recipes that he and his roommates can make,  my oldest has been asking me for recipes. With Chinese New Year around the corner, my thoughts turned to Asian inspired dishes. Although not authentic, this Sweet and Tangy Tahitian Chicken is an update of one my mum used to make and one that my family has loved for years. So,  I dusted  it  off and gave it a bit of a facelift. Since my son is not a shopper I knew that I needed to find everything at my locaIn need of quick and delicious recipes that he and his roommates can make,  my oldest has been asking me for recipes. With Chinese New Year around the corner, my thoughts turned to Asian inspired dishes. Although not authentic, this Sweet and Tangy Tahitian Chicken is an update of one my mum used to make and one that my family has loved for years. So,  I dusted  it  off and gave it a bit of a facelift. Since my son is not a shopper I knew that I needed to find everything at my local Ralphl Ralph"
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView14" />
@@ -126,6 +131,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/street_corner_semibold"
             android:text="INSTRUCTION"
+            android:textColor="@color/design_default_color_on_secondary"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ingridient_recipe" />
@@ -140,6 +146,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="In need of quick and delicious recipes that he and his roommates can make,  my oldest has been asking me for recipes. With Chinese New Year around the corner, my thoughts turned to Asian inspired dishes. Although not authentic, this Sweet and Tangy Tahitian Chicken is an update of one my mum used to make and one that my family has loved for years. So,  I dusted  it  off and gave it a bit of a facelift. Since my son is not a shopper I knew that I needed to find everything at my locaIn need of quick and delicious recipes that he and his roommates can make,  my oldest has been asking me for recipes. With Chinese New Year around the corner, my thoughts turned to Asian inspired dishes. Although not authentic, this Sweet and Tangy Tahitian Chicken is an update of one my mum used to make and one that my family has loved for years. So,  I dusted  it  off and gave it a bit of a facelift. Since my son is not a shopper I knew that I needed to find everything at my local Ralphl Ralph"
+            android:textColor="@color/design_default_color_on_secondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -149,7 +156,6 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/ic_baseline_arrow_back_ios_24"
             android:shadowColor="#323232"
