--- a/app/src/main/res/drawable-hdpi/background2.xml
+++ b/app/src/main/res/drawable-hdpi/background2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
         <gradient android:startColor="#ffff"
-            android:endColor="#272670"/>
+            android:endColor="#74EE84"/>
         <corners android:bottomRightRadius="0dp"/>
 "/>
 
